[project]
name = "insurance-assistants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shamik", email = "39588365+Shamik-07@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
