[project]
name = "insurance-assistants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shamik", email = "39588365+Shamik-07@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "colpali-engine>=0.3.10",
    "crawlee[all]>=0.6.9",
    "duckduckgo-search>=8.0.2",
    "huggingface-hub[hf-xet]>=0.32.0",
    "llama-index>=0.12.37",
    "llama-index-llms-huggingface-api>=0.4.3",
    "llama-index-tools-playwright>=0.2.0",
    "markdownify>=1.1.0",
    "pdf2image>=1.17.0",
    "pydantic>=2.11.5",
    "pymilvus>=2.5.10",
    "pyprojroot>=0.3.0",
    "python-dotenv>=1.1.0",
    "qwen-vl-utils>=0.0.11",
    "requests>=2.32.3",
    "smolagents>=1.16.1",
    "torchvision>=0.21.0",
]


[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pyrefly>=0.16.2",
    "ruff>=0.11.11",
]
